# UNR_AD

./: Readme.md
A1_UNR_Library/src/tools/: glex_bind
A1_UNR_Library/src/unr/api/: unr.h
A1_UNR_Library/src/unr/base/: unr_blk.c  unr_def.h  unr_sig.c
A1_UNR_Library/src/uri/: CMakeLists.txt
A1_UNR_Library/src/uri/api/: uri.h
A1_UNR_Library/src/uri/base/: uri_def.h  uri_rdma.c
A1_UNR_Library/src/uri/mpi/: uri_mpi.h  uri_mpi_channel.c  uri_mpi_rdma.c  uri_mpi_utils.c
A1_UNR_Library/src/uri/verbs/: CMakeLists.txt  uri_verbs.h  uri_verbs_channel.c  uri_verbs_rdma.c  uri_verbs_utils.c
A1_UNR_Library/src/uru/sys/: time.h
A1_UNR_Library/src/uru/type/: status.c  uru_status.h
A1_UNR_Library/tests/: CMakeLists.txt
A1_UNR_Library/tests/channel/: CMakeLists.txt
A1_UNR_Library/tests/channel/glex/: 01_reg_same_loc.c  CMakeLists.txt
A1_UNR_Library/tests/unr/: 02_unr_mem_reg.c  03_unr_mem_reg_sync.c  04_unr_blk_reg.c  11_unr_blk_send_plan.c  12_unr_blk_send_plan_2start.c  13_unr_blk_send_plan_2destroy.c  14_unr_blk_send_start.c  21_unr_blk_send_batch_plan.c  22_unr_blk_send_batch_plan_2start.c  23_unr_blk_send_batch_plan_2destroy.c  24_unr_blk_send_batch_start.c  31_unr_blk_part_send_plan.c  32_unr_blk_part_send_plan_2start.c  33_unr_blk_part_send_plan_2destroy.c  34_unr_blk_part_send_start.c  41_unr_blk_part_send_batch_plan.c  42_unr_blk_part_send_batch_plan_2start.c  43_unr_blk_part_send_batch_plan_2destroy.c  44_unr_blk_part_send_batch_start.c  45_unr_blk_part_send_batch_sync_late.c  51_unr_sig_check_with_create1.c  52_unr_sig_check_with_create2.c  53_unr_sig_reset.c  54_unr_sig_pool_create_and_detect.c  CMakeLists.txt
A1_UNR_Library/tests/uri/: 04_uri_rdma_plan_create_0.c  05_uri_rdma_plan_create_1.c  06_uri_rdma_plan_start.c  07_uri_rdma_plan_destroy.c  CMakeLists.txt
A2_Latency_Test/: latency.xlsx  unr_latency_test.c
A3_Pingpong_Test/: ping-pong.xlsx  unr_pingpong2_test.c  unr_pingpong4_test.c
A4_PowerLLEL/: PowerLLEL.xlsx
A4_PowerLLEL/examples/strong_channel_2304x1536x864/: batch.sh  run.sh
A4_PowerLLEL/examples/strong_channel_2304x1536x864/mpi/: batch.sh
A4_PowerLLEL/examples/strong_channel_2304x1536x864/mpi.pdd/: batch.sh
A4_PowerLLEL/examples/strong_channel_2304x1536x864/mpi.pdd/192x12/: param.in
A4_PowerLLEL/examples/strong_channel_2304x1536x864/mpi.pdd/24x12/: param.in
A4_PowerLLEL/examples/strong_channel_2304x1536x864/mpi.pdd/384x12/: param.in
A4_PowerLLEL/examples/strong_channel_2304x1536x864/mpi.pdd/96x12/: param.in
A4_PowerLLEL/examples/strong_channel_2304x1536x864/mpi/24x24/: param.in
A4_PowerLLEL/examples/strong_channel_2304x1536x864/mpi/48x12/: param.in
A4_PowerLLEL/examples/strong_channel_2304x1536x864/mpi/48x24/: gptlnl  param.in
A4_PowerLLEL/examples/strong_channel_2304x1536x864/mpi/48x48/: param.in
A4_PowerLLEL/examples/strong_channel_2304x1536x864/mpi/96x24/: param.in
A4_PowerLLEL/examples/strong_channel_2304x1536x864/mpiomp/: batch.sh
A4_PowerLLEL/examples/strong_channel_2304x1536x864/mpiomp.pdd/: batch.sh  machinefile
A4_PowerLLEL/examples/strong_channel_2304x1536x864/mpiomp.pdd/4x12/: param.in
A4_PowerLLEL/examples/strong_channel_2304x1536x864/mpiomp.pdd/8x12/: param.in
A4_PowerLLEL/examples/strong_channel_2304x1536x864/mpiomp/16x12/: param.in
A4_PowerLLEL/examples/strong_channel_2304x1536x864/mpiomp/2x12/: param.in
A4_PowerLLEL/examples/strong_channel_2304x1536x864/mpiomp/32x12/: param.in
A4_PowerLLEL/examples/strong_channel_4608x3072x1152/: batch.sh
A4_PowerLLEL/examples/strong_channel_4608x3072x1152/mpi/: batch.sh
A4_PowerLLEL/examples/strong_channel_4608x3072x1152/mpi.pdd/: batch.sh
A4_PowerLLEL/examples/strong_channel_4608x3072x1152/mpi.pdd/768x24/: param.in
A4_PowerLLEL/examples/strong_channel_4608x3072x1152/mpi/192x24/: param.in
A4_PowerLLEL/examples/strong_channel_4608x3072x1152/mpi/384x24/: param.in
A4_PowerLLEL/examples/strong_channel_4608x3072x1152/mpi/96x24/: param.in
A4_PowerLLEL/examples/strong_channel_4608x3072x1152/mpiomp/: batch.sh
A4_PowerLLEL/examples/strong_channel_4608x3072x1152/mpiomp.pdd/: batch.sh
A4_PowerLLEL/examples/strong_channel_4608x3072x1152/mpiomp.pdd/16x24/: param.in
A4_PowerLLEL/examples/strong_channel_4608x3072x1152/mpiomp.pdd/32x24/: param.in
A4_PowerLLEL/examples/strong_channel_4608x3072x1152/mpiomp.pdd/48x24/: param.in
A4_PowerLLEL/examples/strong_channel_4608x3072x1152/mpiomp.pdd/4x24/: gptlnl  param.in
A4_PowerLLEL/examples/strong_channel_4608x3072x1152/mpiomp.pdd/8x24/: param.in
A4_PowerLLEL/examples/strong_channel_5760x5760x4320/: batch.sh  run.sh
A4_PowerLLEL/examples/strong_channel_5760x5760x4320/mpi/: batch.sh
A4_PowerLLEL/examples/strong_channel_5760x5760x4320/mpi.pdd/: batch.sh
A4_PowerLLEL/examples/strong_channel_5760x5760x4320/mpiomp/: batch.sh
A4_PowerLLEL/examples/strong_channel_5760x5760x4320/mpiomp.pdd/: batch.sh
A4_PowerLLEL/src/: CMakeLists.txt  Makefile  cufft_posproc_redft01.f90  cufft_posproc_redft10.f90  cufft_preproc_redft01.f90  cufft_preproc_redft10.f90  decomp_2d_c.f90  decomp_2d_c.mod_rm  gptlf.f90  gptlnl  main.f90  mod_calcRHS.f90  mod_calcVel.f90  mod_dataIO.f90  mod_device.f90  mod_fft.f90  mod_fft_kmlfft.f90  mod_fft_mkl.f90  mod_hdf5.f90  mod_mesh.f90  mod_mpi.f90  mod_parameters.f90  mod_poissonSolver.f90  mod_spaceAvg.f90  mod_statistics.f90  mod_type.f90  mod_updateBound.f90  mod_utils.f90  mod_variables.f90  nvtx.f90
A4_PowerLLEL/src/decomp2d/: decomp_2d.f90  transpose_x_to_y.f90  transpose_y_to_x.f90  transpose_y_to_z.f90  transpose_z_to_y.f90
A4_PowerLLEL/src/postprocess/: Makefile  convert_precision.f90  main_postproc.f90  mod_bc_postproc.f90  mod_dataio_postproc.f90  mod_param_postproc.f90  mod_statistics_postproc.f90  mod_variables_postproc.f90  mod_vortex_postproc.f90  param_postproc.in
A4_PowerLLEL/src/src_c/: CMakeLists.txt  README.md  bind.h  decomp_2d.c  decomp_2d.h  mod_calc_rhs.c  mod_calc_vel.c  mod_fft.c  mod_fft.h  mod_fft_kmlfft.inc  mod_hdf5.c  mod_poisson_solver.c  mod_poisson_solver_pipeline_pdd_rdma.c  mod_update_bound.c  mod_update_bound.h  mod_utils.c  mod_utils.h
(+14 files in other folders)
